# chatti

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: chatti_benchmarks.rs
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  ui.rs
src/ui/: chat.rs  input_handler.rs  markdown_renderer.rs  mod.rs  renderer.rs  spinner.rs  state.rs
tests/: chat_ui_tests.rs  input_handler_tests.rs  lib.rs  markdown_renderer_tests.rs  spinner_tests.rs  ui_state_tests.rs
tests/mock/: mod.rs
