[package]
name = "chatti"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Terminal-based chat application that interfaces with Ollama"
homepage = "https://github.com/nubilfi/chatti"
documentation = "https://docs.rs/chatti/latest/chatti"
repository = "https://github.com/nubilfi/chatti"
keywords = ["chat", "AI", "tui", "terminal", "ollama"]
readme = "README.md"
exclude = [
  ".github/*",
  ".gitignore",
  "benches/*",
  "tests/*",
]

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "5.0.1"
futures-util = { version = "0.3.30", features = ["std"] }
log = "0.4.22"
pulldown-cmark = "0.12.1"
ratatui = { version = "0.28.1", features = ["crossterm"] }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
syntect = "5.2.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-width = "0.2.0"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "chatti_benchmarks"
harness = false

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/{name}-{version}-{target}.tar.gz"
bin-dir = "{bin}{binary-ext}"
pkg-fmt = "tgz"
